--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	</head>
 
 	<body>
+	<p>Hello World</p>
 		<h1>PVHS Spelunky Website!</h1>
 		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
 		<a href="http://pmith14.github.io/spelunky/index.html"
