--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-	<head>
+<html lang="en">
+    <head>
+    	<title>PVHS Spelunky</title>
 	</head>
 
 	<body>
-	<p>Hello World</p>
+		<p>Hello World</p>
 		<h1>PVHS Spelunky Website!</h1>
 		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
-		<a href="http://pmith14.github.io/spelunky/index.html"
+		<a href="http://pmith14.github.io/spelunky/index.html">Spelunky Online</a>
 	</body>
 </html>
