Spelunky Website with pics

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<title>PVHS Spelunky</title>
 	</head>
 
-	<body>
+	<body background="banner_1.jpeg">
 		<p>Hello World</p>
 		<h1>PVHS Spelunky Website!</h1>
 		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
