Spelunky Website with pics

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    	<link rel="stylesheet" href="styles.css">
-    	<title>PVHS Spelunky</title>
+    	<link rel="stylesheet" href="stylesheet.css">
+    	<title >PVHS Spelunky</title>
 	</head>
 
-	<body background="banner_1.jpeg" style="background-repeat:no-repeat; background-position:center;">
-		<p>Hello World</p>
+	<body>
 		<h1>PVHS Spelunky Website!</h1>
 		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
+		<div></div>
 		<a href="http://pmith14.github.io/spelunky/index.html">Spelunky Online</a>
 	</body>
 </html>
