Spelunky Website, almost done

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
 		<div></div>
 		<a href="http://pmith14.github.io/spelunky/index.html">Spelunky Online</a>
+
+		<div></div>
+
+		<img src="SpelunkyIcon.png">SPELUNKY!!!</body>
 	</body>
 </html>
