Spelunky Website,centered

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
     <head>
     	<link rel="stylesheet" href="stylesheet.css">
-    	<title >PVHS Spelunky</title>
+    	<title>PVHS Spelunky</title>
 	</head>
 
 	<body>
-		<h1>PVHS Spelunky Website!</h1>
-		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download</a>
-		<div></div>
+		<h1>Spelunky Website!</h1>
+		<a href="http://pmith14.github.io/Files/Spelunky.zip">Spelunky Download [MAC]</a>
+		<div>
+		</div>
 		<a href="http://pmith14.github.io/spelunky/index.html">Spelunky Online</a>
-
 		<div></div>
-
-		<img src="SpelunkyIcon.png"></body>
+		<img src="SpelunkyIcon.png"></img>
 	</body>
 </html>
